Fix styling of portfolio on mobile

--- a/stocksearch/src/app/portfolio-item/portfolio-item.component.css
+++ b/stocksearch/src/app/portfolio-item/portfolio-item.component.css
@@ -26,12 +26,20 @@
 
 .flex-container {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
 }
 
 .flex-child {
     flex: 1;
     font-size: 20px;
+}
+
+@media screen and (max-width: 600px) {
+    .flex-child {
+        flex: none;
+        width: 100%;
+    }
 }
 
 .flex-child div {
