--- a/stocksearch/src/app/portfolio/portfolio.component.css
+++ b/stocksearch/src/app/portfolio/portfolio.component.css
@@ -1,7 +1,7 @@
 #portfolio {
     margin-left: auto;
     margin-right: auto;
-    width: 70%;
+    width: 80%;
 }
 
 #spinner {
@@ -24,5 +24,15 @@
     margin-left: auto;
     margin-right: auto;
     margin-top: 30px;
-    width: 70%;
+    width: 80%;
+}
+
+@media screen and (max-width: 600px) {
+    #portfolio, #title {
+        width: 90%;
+    }
+
+    #title {
+        margin-bottom: 40px;
+    }
 }
